Reading new data modal news articles | side stories carousel fix

--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="js/news-loader.js"></script>
     <script src="js/content-loader.js"></script>
     <script src="js/main.js"></script>
     <script src="js/carousel.js"></script>
