updated home page theme with codepen example

--- a/index-news-gallery.html
+++ b/index-news-gallery.html
@@ -415,59 +415,12 @@
         </button>
     </div>
 
-    <!-- Header/Navigation -->
-    <header class="newspaper-header">
-        <div class="masthead">
-            <div class="publication-info">
-                <div class="edition-info">
-                    <span data-en="Digital Edition" data-te="డిజిటల్ ఎడిషన్">Digital Edition</span>
-                </div>
-            </div>
-            
-            <div class="main-title">
-                <div class="title-with-logo">
-                    <div class="vnr-logo">
-                        <div class="logo-circle">VNR</div>
-                    </div>
-                    <div class="title-content">
-                        <h1 class="newspaper-title">
-                            <span data-en="The People's Voice" data-te="ప్రజల స్వరం">The People's Voice</span>
-                            <div class="title-ornament">
-                                <div class="tricolor-line"></div>
-                            </div>
-                        </h1>
-                        <p class="tagline" data-en="Truth • Service • Progress" data-te="సత్యం • సేవ • పురోగతి">Truth • Service • Progress</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <nav class="main-nav">
-            <div class="nav-container">
-                <button class="mobile-menu-toggle" aria-label="Toggle Menu">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <ul class="nav-menu">
-                    <li><a href="#hero" data-en="Breaking" data-te="ప్రధాన వార్తలు">Breaking</a></li>
-                    <li><a href="profile.html" data-en="Profile" data-te="వ్యక్తిత్వం">Profile</a></li>
-                    <li><a href="profile.html#manifesto" data-en="Manifesto" data-te="కార్యాచరణ">Manifesto</a></li>
-                    <li><a href="profile.html#initiatives" data-en="Initiatives" data-te="కార్యక్రమాలు">Initiatives</a></li>
-                    <li><a href="profile.html#events" data-en="Events" data-te="కార్యక్రమాలు">Events</a></li>
-                    <li><a href="profile.html#campaigns" data-en="Campaigns" data-te="ప్రచారం">Campaigns</a></li>
-                    <li><a href="profile.html#gallery" data-en="Gallery" data-te="గ్యాలరీ">Gallery</a></li>
-                    <li><a href="#testimonials" data-en="Voices" data-te="అభిప్రాయాలు">Voices</a></li>
-                    <li><a href="#contact" data-en="Contact" data-te="సంప్రదింపులు">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
     <!-- Main News Gallery Layout -->
     <main class="news-gallery-layout">
-        <!-- News Content Header -->
+        <!-- News Masthead -->
         <header class="news-masthead">
-            <h1 data-en="Latest News & Updates" data-te="తాజా వార్తలు & నవీకరణలు">Latest News & Updates</h1>
-            <p class="tagline" data-en="Stay informed with the latest political developments" data-te="తాజా రాజకీయ పరిణామాలతో సమాచారంతో ఉండండి">Stay informed with the latest political developments</p>
+            <h1 data-en="VNR News Gallery" data-te="VNR వార్తల గ్యాలరీ">VNR News Gallery</h1>
+            <p class="tagline" data-en="Truth • Progress • Service to the People" data-te="సత్యం • పురోగతి • ప్రజా సేవ">Truth • Progress • Service to the People</p>
         </header>
 
         <!-- Main News Grid -->
