--- a/profile.html
+++ b/profile.html
@@ -81,7 +81,7 @@
                 </button>
                 <ul class="nav-menu">
                     <li><a href="index.html#hero" data-en="Home" data-te="హోమ్">Home</a></li>
-                    <li><a href="#profile" data-en="Profile" data-te="వ్యక్తిత్వం" class="active">Profile</a></li>
+                    <li><a href="#profile-overview" data-en="Profile" data-te="వ్యక్తిత్వం" class="active">Profile</a></li>
                     <li><a href="#manifesto" data-en="Manifesto" data-te="కార్యాచరణ">Manifesto</a></li>
                     <li><a href="#initiatives" data-en="Initiatives" data-te="కార్యక్రమాలు">Initiatives</a></li>
                     <li><a href="#events" data-en="Events" data-te="కార్యక్రమాలు">Events</a></li>
